cmake_minimum_required(VERSION 2.6)

project (practica CXX)

set(PRACTICA_HEADERS Practica.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(PRACTICA_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(PRACTICA_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${PRACTICA_HEADERS})

CODEGEN_FILES(PRACTICA_CODEGEN_SOURCES ${PRACTICA_CODEGEN_DIR} ${PRACTICA_HEADERS})

add_custom_command(OUTPUT ${PRACTICA_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${PRACTICA_CODEGEN_DIR} -t service ${PRACTICA_HEADERS}
    DEPENDS ${PRACTICA_HEADERS_PATHS}
)

file(GLOB PRACTICA_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND PRACTICA_SOURCES ${PRACTICA_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(practica MODULE ${PRACTICA_SOURCES})

set_target_properties(practica PROPERTIES PREFIX "")
set_target_properties(practica PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(practica ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
